--- a/src/Yeskn/MainBundle/Resources/views/landlord.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/landlord.html.twig
@@ -34,4 +34,6 @@
     if (l2dHidden === null) {
         localStorage.setItem('live2dhidden', 0);
     }
+    // 获取用户的语言设置
+    const userLang = "{{ app.request.locale }}";
 </script>
