--- a/src/Yeskn/MainBundle/Resources/views/post/create.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/post/create.html.twig
@@ -5,31 +5,31 @@
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    创建新主题
+                    {{ 'nav_create_post'|trans }}
                 </div>
                 <div class="panel-body">
                     <form data-pjax-form action="{{ path('create_post') }}" method="post" id="createTopic">
                         <div class="form-group">
-                            <label class="control-label required" for="post_title">标题</label>
+                            <label class="control-label required" for="post_title">{{ 'Title'|trans }}</label>
                             <input type="text" id="post_title" name="title" required="required" maxlength="100" autofocus="autofocus" class="form-control">
                         </div>
 
                         <div class="form-group">
-                            <label class="control-label required" for="content">内容</label>
+                            <label class="control-label required" for="content">{{ '内容'|trans }}</label>
                             <textarea class="form-control hide" name="content" id="content" cols="30" rows="10" title=""></textarea>
                             <div id="editor"></div>
                         </div>
 
                         <div class="form-group">
-                            <label for="select-node">选择板块</label>
+                            <label for="select-node"> {{ '选择板块'|trans }}</label>
                             <select name="tab" id="select-node" class="form-control" title="">
                                 {% for tab in tabs %}
-                                    <option value="{{ tab.alias }}">{{ tab.name }}</option>
+                                    <option value="{{ tab.alias }}">{{ tab.name |trans }}</option>
                                 {% endfor %}
                             </select>
                         </div>
 
-                        <button type="submit" value="submit" class="btn btn-info">提交</button>
+                        <button type="submit" value="submit" class="btn btn-info">{{ '提交'|trans }}</button>
                     </form>
                 </div>
             </div>
