--- a/src/Yeskn/AdminBundle/Resources/views/post/create.html.twig
+++ b/src/Yeskn/AdminBundle/Resources/views/post/create.html.twig
@@ -10,7 +10,7 @@
                     文章列表 &raquo; {{ title is defined ? title : '创建新的文章' }}
                         <div class="pull-right">
                             <div class="btn-group" role="group" aria-label="...">
-                                <button type="button" class="btn btn-info btn-sm"><i class="fa fa-save"></i> 存草稿</button>
+{#                                <button type="button" class="btn btn-info btn-sm"><i class="fa fa-save"></i> 存草稿</button>#}
                                 {% if post.id is not empty %}
                                     <a data-delete="post" role="button" class="btn btn-danger btn-sm" href="{{ path('admin_delete',{entity: 'post', id:post.id}) }}">
                                         <i class="fa fa-remove"></i> 删除
@@ -77,6 +77,13 @@
                     $('#post_content').val(html);
                 };
                 vmoexEditor.create();
+                // 设置初始值
+                const content = vmoexEditor.txt.html();
+                console.log('Editor Content:', content);
+
+                $('#post_content').val(content);
+
+
             });
         });
     </script>
