--- a/src/Yeskn/MainBundle/Resources/views/post/index.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/post/index.html.twig
@@ -9,8 +9,8 @@
                        <div class="tab-info">
                            <b>
                                <a data-pjax href="{{ path('homepage') }}">{{ 'site_name'|trans }}</a>
-                               <i class="fa  fa-angle-right"></i> <a data-pjax href="{{ path('post_list', {tab:currentTab.parent.alias}) }}">{{ currentTab.parent.name }}</a>
-                               <i class="fa fa-angle-right"></i> {{ currentTab.name }}
+                               <i class="fa  fa-angle-right"></i> <a data-pjax href="{{ path('post_list', {tab:currentTab.parent.alias}) }}">{{ currentTab.parent.name|trans  }}</a>
+                               <i class="fa fa-angle-right"></i> {{ currentTab.name|trans }}
                            </b>
                            <div style="padding: 10px 0">
                                {{ currentTab.description }}
