--- a/src/Yeskn/AdminBundle/Resources/views/post/create.html.twig
+++ b/src/Yeskn/AdminBundle/Resources/views/post/create.html.twig
@@ -16,7 +16,7 @@
                                         <i class="fa fa-remove"></i> 删除
                                     </a>
                                 {% endif %}
-                                <button type="submit" class="btn btn-success btn-sm"><i class="fa fa-save"></i> 立即发布</button>
+                                <button type="submit" class="btn btn-success btn-sm"><i class="fa fa-save"></i> 保存 </button>
                             </div>
                         </div>
                 </h3>
