--- a/src/Yeskn/MainBundle/Resources/views/base/default.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/base/default.html.twig
@@ -31,6 +31,8 @@
             </script>
         {% endjavascripts %}
     {% endblock %}
+    <script src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js"></script>
+
 </head>
 
 <body style="display: none">
