--- a/src/Yeskn/MainBundle/Resources/views/post/create.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/post/create.html.twig
@@ -28,7 +28,10 @@
                                 {% endfor %}
                             </select>
                         </div>
-
+                        <div class="form-group">
+                        <i class="fa fa-question-circle"></i> {{ '请注意言论,主题创建后不允许删除或修改'|trans }} ,
+                            {{ '图片上传大小'|trans }}
+                        </div>
                         <button type="submit" value="submit" class="btn btn-info">{{ '提交'|trans }}</button>
                     </form>
                 </div>
